# tpmlops

./: .gitignore  README.md  common.py  config.yml  pyproject.toml  requirements.txt  streamlit_app.py
api/: __init__.py  config.py  dependencies.py  error_handlers.py  exceptions.py  main.py  model_metadata.py  model_registry.py  repository.py  schemas.py  service.py  validation.py
api/infrastructure/: __init__.py  model_registry.py
api/repositories/: __init__.py  prediction_repository.py
api/routes/: __init__.py  health.py  prediction.py
api/schemas/: __init__.py  errors.py  health.py  prediction.py
api/use_cases/: __init__.py  get_random_test_sample.py  predict_trip.py  predict_trip_batch.py
data/: download_data.py  load_data.py
model/: custom_model.py  features.py  preprocessing.py  ridge_features.py  test_model.py  train.py  train_custom_model.py  train_ridge.py
model/evaluation/: __init__.py  test_model.py
model/inference/: __init__.py  custom_model.py
model/preprocessing/: __init__.py  features.py  preprocessing.py
model/training/: train.py  train_custom_model.py  train_ridge.py
notebooks/: 01_exploration.ipynb  01_exploration_taxi.py  02_baseline_and_time_features.ipynb  02_baseline_and_time_features.py  03_distance_and_map_features.ipynb  03_distance_and_map_features.py
ui/: __init__.py  app.py  bootstrap.py  data_access.py
ui/pages/: 2_Statistics.py
