[project]
name = "jupyterproject"
version = "0.1.0"
description = "Base de projet Python et Jupyter pour analyse de donnees."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "folium>=0.20.0",
    "ipykernel>=6.29.5",
    "jupyterlab>=4.5.6",
    "matplotlib>=3.10.8",
    "numpy>=2.3.4",
    "pandas>=2.3.3",
    "pyyaml>=6.0.2",
    "scikit-learn>=1.7.2",
    "seaborn>=0.13.2",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
